src/glx/indirect_glx.c
@@ -132,7 +132,7 @@ indirect_bind_context(struct glx_context *gc, struct glx_context *old,
    __GLXattribute *state;
    Display *dpy = gc->psc->dpy;
    int opcode = __glXSetupForCommand(dpy);
-   Bool ret;
+   Bool sent;
 
    if (old != &dummyContext && !old->isDirect && old->psc->dpy == dpy) {
       tag = old->currentContextTag;
@@ -141,8 +141,8 @@ indirect_bind_context(struct glx_context *gc, struct glx_context *old,
       tag = 0;
    }
 
-   ret = SendMakeCurrentRequest(dpy, opcode, gc->xid, tag, draw, read,
-                                &gc->currentContextTag);
+   sent = SendMakeCurrentRequest(dpy, opcode, gc->xid, tag, draw, read,
+				 &gc->currentContextTag);
 
    if (!IndirectAPI)
       IndirectAPI = __glXNewIndirectAPI();
@@ -155,7 +155,7 @@ indirect_bind_context(struct glx_context *gc, struct glx_context *old,
       __glXInitVertexArrayState(gc);
    }
 
-   return ret;
+   return !sent;
 }
 
 static void
